// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination demo -- pageSize 1`] = `
.c3 {
  border-radius: 2px;
  cursor: pointer;
  padding: 0 8px;
  padding-right: 40px;
  box-sizing: border-box;
}

.c4 {
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -6px;
}

.c1 {
  box-sizing: border-box;
  position: relative;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  font-size: 12px;
  color: #6b798e;
  background-color: #fff;
}

.c1 .c2 {
  height: 28px;
  line-height: 28px;
  border: 1px solid #c3cad9;
}

.c1 .c2:hover {
  border-color: #4683e6;
}

.c1 .style__MenuWrap-jpnfrZ {
  background: #fff;
  border: 1px solid #c3cad9;
}

.c0 {
  color: #6b798e;
  font-size: 12px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: inline-block;
  vertical-align: middle;
}

.c0 .uc-fe-pagination-item,
.c0 .uc-fe-pagination-prev,
.c0 .uc-fe-pagination-next,
.c0 .uc-fe-pagination-jump-prev,
.c0 .uc-fe-pagination-jump-next {
  outline: none;
  box-sizing: border-box;
  background-color: #fff;
  text-align: center;
  border-radius: 2px;
  margin-right: 5px;
  cursor: pointer;
  padding: 0 2px;
  display: inline-block;
  vertical-align: middle;
  min-width: 28px;
  height: 28px;
  line-height: 26px;
}

.c0 .uc-fe-pagination-item,
.c0 .uc-fe-pagination-prev,
.c0 .uc-fe-pagination-next {
  border: 1px solid #c3cad9;
}

.c0 .uc-fe-pagination-item:hover,
.c0 .uc-fe-pagination-prev:hover,
.c0 .uc-fe-pagination-next:hover {
  border-color: #4683e6;
  color: #fff;
  background-color: #4683e6;
}

.c0 .uc-fe-pagination-jump-prev:hover,
.c0 .uc-fe-pagination-jump-next:hover {
  color: #4074e1;
}

.c0 .uc-fe-pagination-item-active,
.c0 .uc-fe-pagination-item-active:hover {
  border-color: #4683e6;
  color: #4074e1;
  background-color: #f4f9ff;
  cursor: default;
}

.c0 .uc-fe-pagination-disabled,
.c0 .uc-fe-pagination-disabled:hover {
  border-color: #d9d9d9;
  background-color: #f7f7f7;
  color: #bbb;
  cursor: not-allowed;
}

.c0 .uc-fe-pagination-prev-icon,
.c0 .uc-fe-pagination-next-icon {
  cursor: inherit;
}

.c0 .uc-fe-pagination-options,
.c0 .uc-fe-pagination-options-size-changer,
.c0 .uc-fe-pagination-options-quick-jumper {
  display: inline-block;
  vertical-align: middle;
}

.c0 .uc-fe-pagination-options-size-changer {
  margin-right: 5px;
}

.c0 .uc-fe-pagination-options-gobutton {
  margin-left: 5px;
}

.c0 .uc-fe-pagination-quick-jumper-text,
.c0 .uc-fe-pagination-options-quick-jumper-text {
  color: #6b798e;
}

<div>
  <div
    class="demo-wrap"
  >
    <ul
      class="uc-fe-pagination uc-fe-pagination-md c0"
      unselectable="unselectable"
    >
      <li
        aria-disabled="true"
        class="uc-fe-pagination-disabled uc-fe-pagination-prev"
        title="上一页"
      >
        <i
          class="icon__left uc-fe-pagination-prev-icon "
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-1 uc-fe-pagination-item-active"
        tabindex="0"
        title="1"
      >
        <a>
          1
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-2"
        tabindex="0"
        title="2"
      >
        <a>
          2
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-3"
        tabindex="0"
        title="3"
      >
        <a>
          3
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-4"
        tabindex="0"
        title="4"
      >
        <a>
          4
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-5"
        tabindex="0"
        title="5"
      >
        <a>
          5
        </a>
      </li>
      <li
        aria-disabled="false"
        class=" uc-fe-pagination-next"
        tabindex="0"
        title="下一页"
      >
        <i
          class="icon__right uc-fe-pagination-next-icon "
        />
      </li>
      <li
        class="uc-fe-pagination-options"
      >
        <div
          class="uc-fe-pagination-options-size-changer c1"
        >
          <div>
            <div
              class="c2 c3"
            >
              <div>
                20 条/页
              </div>
              <i
                class="icon__down c4 "
              />
            </div>
          </div>
        </div>
      </li>
    </ul>
  </div>
  <div
    class="demo-wrap"
  >
    <ul
      class="uc-fe-pagination uc-fe-pagination-md c0"
      unselectable="unselectable"
    >
      <li
        aria-disabled="true"
        class="uc-fe-pagination-disabled uc-fe-pagination-prev"
        title="上一页"
      >
        <i
          class="icon__left uc-fe-pagination-prev-icon "
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-1 uc-fe-pagination-item-active"
        tabindex="0"
        title="1"
      >
        <a>
          1
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-2"
        tabindex="0"
        title="2"
      >
        <a>
          2
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-3"
        tabindex="0"
        title="3"
      >
        <a>
          3
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-4"
        tabindex="0"
        title="4"
      >
        <a>
          4
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-5"
        tabindex="0"
        title="5"
      >
        <a>
          5
        </a>
      </li>
      <li
        aria-disabled="false"
        class=" uc-fe-pagination-next"
        tabindex="0"
        title="下一页"
      >
        <i
          class="icon__right uc-fe-pagination-next-icon "
        />
      </li>
      <li
        class="uc-fe-pagination-options"
      >
        <div
          class="uc-fe-pagination-options-size-changer c1"
        >
          <div>
            <div
              class="c2 c3"
            >
              <div>
                20 条/页
              </div>
              <i
                class="icon__down c4 "
              />
            </div>
          </div>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Pagination demo -- pageSizeOptions 1`] = `
.c3 {
  border-radius: 2px;
  cursor: pointer;
  padding: 0 8px;
  padding-right: 40px;
  box-sizing: border-box;
}

.c4 {
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -6px;
}

.c1 {
  box-sizing: border-box;
  position: relative;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  font-size: 12px;
  color: #6b798e;
  background-color: #fff;
}

.c1 .c2 {
  height: 28px;
  line-height: 28px;
  border: 1px solid #c3cad9;
}

.c1 .c2:hover {
  border-color: #4683e6;
}

.c1 .style__MenuWrap-jpnfrZ {
  background: #fff;
  border: 1px solid #c3cad9;
}

.c0 {
  color: #6b798e;
  font-size: 12px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: inline-block;
  vertical-align: middle;
}

.c0 .uc-fe-pagination-item,
.c0 .uc-fe-pagination-prev,
.c0 .uc-fe-pagination-next,
.c0 .uc-fe-pagination-jump-prev,
.c0 .uc-fe-pagination-jump-next {
  outline: none;
  box-sizing: border-box;
  background-color: #fff;
  text-align: center;
  border-radius: 2px;
  margin-right: 5px;
  cursor: pointer;
  padding: 0 2px;
  display: inline-block;
  vertical-align: middle;
  min-width: 28px;
  height: 28px;
  line-height: 26px;
}

.c0 .uc-fe-pagination-item,
.c0 .uc-fe-pagination-prev,
.c0 .uc-fe-pagination-next {
  border: 1px solid #c3cad9;
}

.c0 .uc-fe-pagination-item:hover,
.c0 .uc-fe-pagination-prev:hover,
.c0 .uc-fe-pagination-next:hover {
  border-color: #4683e6;
  color: #fff;
  background-color: #4683e6;
}

.c0 .uc-fe-pagination-jump-prev:hover,
.c0 .uc-fe-pagination-jump-next:hover {
  color: #4074e1;
}

.c0 .uc-fe-pagination-item-active,
.c0 .uc-fe-pagination-item-active:hover {
  border-color: #4683e6;
  color: #4074e1;
  background-color: #f4f9ff;
  cursor: default;
}

.c0 .uc-fe-pagination-disabled,
.c0 .uc-fe-pagination-disabled:hover {
  border-color: #d9d9d9;
  background-color: #f7f7f7;
  color: #bbb;
  cursor: not-allowed;
}

.c0 .uc-fe-pagination-prev-icon,
.c0 .uc-fe-pagination-next-icon {
  cursor: inherit;
}

.c0 .uc-fe-pagination-options,
.c0 .uc-fe-pagination-options-size-changer,
.c0 .uc-fe-pagination-options-quick-jumper {
  display: inline-block;
  vertical-align: middle;
}

.c0 .uc-fe-pagination-options-size-changer {
  margin-right: 5px;
}

.c0 .uc-fe-pagination-options-gobutton {
  margin-left: 5px;
}

.c0 .uc-fe-pagination-quick-jumper-text,
.c0 .uc-fe-pagination-options-quick-jumper-text {
  color: #6b798e;
}

<div>
  <div
    class="demo-wrap"
  >
    <ul
      class="uc-fe-pagination uc-fe-pagination-md c0"
      unselectable="unselectable"
    >
      <li
        aria-disabled="true"
        class="uc-fe-pagination-disabled uc-fe-pagination-prev"
        title="上一页"
      >
        <i
          class="icon__left uc-fe-pagination-prev-icon "
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-1 uc-fe-pagination-item-active"
        tabindex="0"
        title="1"
      >
        <a>
          1
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-2"
        tabindex="0"
        title="2"
      >
        <a>
          2
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-3"
        tabindex="0"
        title="3"
      >
        <a>
          3
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-4"
        tabindex="0"
        title="4"
      >
        <a>
          4
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-5 uc-fe-pagination-item-before-jump-next"
        tabindex="0"
        title="5"
      >
        <a>
          5
        </a>
      </li>
      <li
        class="uc-fe-pagination-jump-next"
        tabindex="0"
        title="向后 5 页"
      >
        <i
          class="icon__more-three uc-fe-pagination-jump-icon "
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-10"
        tabindex="0"
        title="10"
      >
        <a>
          10
        </a>
      </li>
      <li
        aria-disabled="false"
        class=" uc-fe-pagination-next"
        tabindex="0"
        title="下一页"
      >
        <i
          class="icon__right uc-fe-pagination-next-icon "
        />
      </li>
      <li
        class="uc-fe-pagination-options"
      >
        <div
          class="uc-fe-pagination-options-size-changer c1"
        >
          <div>
            <div
              class="c2 c3"
            >
              <div>
                10 条/页
              </div>
              <i
                class="icon__down c4 "
              />
            </div>
          </div>
        </div>
      </li>
    </ul>
  </div>
  <div
    class="demo-wrap"
  >
    <ul
      class="uc-fe-pagination uc-fe-pagination-md c0"
      unselectable="unselectable"
    >
      <li
        aria-disabled="true"
        class="uc-fe-pagination-disabled uc-fe-pagination-prev"
        title="上一页"
      >
        <i
          class="icon__left uc-fe-pagination-prev-icon "
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-1 uc-fe-pagination-item-active"
        tabindex="0"
        title="1"
      >
        <a>
          1
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-2"
        tabindex="0"
        title="2"
      >
        <a>
          2
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-3"
        tabindex="0"
        title="3"
      >
        <a>
          3
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-4"
        tabindex="0"
        title="4"
      >
        <a>
          4
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-5 uc-fe-pagination-item-before-jump-next"
        tabindex="0"
        title="5"
      >
        <a>
          5
        </a>
      </li>
      <li
        class="uc-fe-pagination-jump-next"
        tabindex="0"
        title="向后 5 页"
      >
        <i
          class="icon__more-three uc-fe-pagination-jump-icon "
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-10"
        tabindex="0"
        title="10"
      >
        <a>
          10
        </a>
      </li>
      <li
        aria-disabled="false"
        class=" uc-fe-pagination-next"
        tabindex="0"
        title="下一页"
      >
        <i
          class="icon__right uc-fe-pagination-next-icon "
        />
      </li>
      <li
        class="uc-fe-pagination-options"
      >
        <div
          class="uc-fe-pagination-options-size-changer c1"
        >
          <div>
            <div
              class="c2 c3"
            >
              <div>
                10 条/页
              </div>
              <i
                class="icon__down c4 "
              />
            </div>
          </div>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Pagination demo -- pagination 1`] = `
.c28 {
  position: relative;
}

.c30 {
  border: none;
  outline: none;
  padding: 0;
  color: inherit;
}

.c25 {
  position: absolute;
  box-sizing: border-box;
  text-align: center;
  border-radius: 2px;
  border-style: solid;
  color: inherit;
  cursor: pointer;
  background: #fff;
  display: inline-block;
  vertical-align: middle;
}

.c27 {
  position: absolute;
  box-sizing: border-box;
  text-align: center;
  border-radius: 2px;
  border-style: solid;
  color: inherit;
  cursor: pointer;
  background: #fff;
  display: inline-block;
  vertical-align: middle;
}

.c23 {
  position: relative;
  box-sizing: border-box;
  border-radius: 2px;
  display: inline-block;
  vertical-align: middle;
  color: #6b798e;
  height: 28px;
  border: 1px solid #c3cad9;
  padding-right: 22px;
}

.c23 .c29 {
  line-height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.c23 .c29::-webkit-input-placeholder {
  color: #abb4c3;
}

.c23 .c29::-moz-placeholder {
  color: #abb4c3;
}

.c23 .c29:-ms-input-placeholder {
  color: #abb4c3;
}

.c23 .c29::placeholder {
  color: #abb4c3;
}

.c23 .c24,
.c23 .c26 {
  border-color: #c3cad9;
}

.c23:hover {
  border-color: #4683e6;
}

.c23 .c29 {
  padding: 0 0 0 8px;
  text-align: left;
  width: 34px;
}

.c23 .c24,
.c23 .c26 {
  right: 0;
  height: 13px;
  line-height: 13px;
  width: 22px;
}

.c23 .c24:hover,
.c23 .c26:hover {
  color: #4074e1;
}

.c23 .c24 {
  border-width: 0 0 0 1px;
  top: 0;
}

.c23 .c26 {
  border-width: 1px 0 0 1px;
  bottom: 0;
}

.c31 {
  color: #6b798e;
  font-size: 12px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: inline-block;
  vertical-align: middle;
}

.c31 .uc-fe-pagination-item,
.c31 .uc-fe-pagination-prev,
.c31 .uc-fe-pagination-next,
.c31 .uc-fe-pagination-jump-prev,
.c31 .uc-fe-pagination-jump-next {
  outline: none;
  box-sizing: border-box;
  background-color: #fff;
  text-align: center;
  border-radius: 2px;
  margin-right: 5px;
  cursor: pointer;
  padding: 0 2px;
  display: inline-block;
  vertical-align: middle;
  min-width: 28px;
  height: 28px;
  line-height: 26px;
}

.c31 .uc-fe-pagination-item,
.c31 .uc-fe-pagination-prev,
.c31 .uc-fe-pagination-next {
  border: 1px solid #c3cad9;
}

.c31 .uc-fe-pagination-item:hover,
.c31 .uc-fe-pagination-prev:hover,
.c31 .uc-fe-pagination-next:hover {
  border-color: #4683e6;
  color: #fff;
  background-color: #4683e6;
}

.c31 .uc-fe-pagination-jump-prev:hover,
.c31 .uc-fe-pagination-jump-next:hover {
  color: #4074e1;
}

.c31 .uc-fe-pagination-item-active,
.c31 .uc-fe-pagination-item-active:hover {
  border-color: #4683e6;
  color: #4074e1;
  background-color: #f4f9ff;
  cursor: default;
}

.c31 .uc-fe-pagination-disabled,
.c31 .uc-fe-pagination-disabled:hover {
  border-color: #d9d9d9;
  background-color: #f7f7f7;
  color: #bbb;
  cursor: not-allowed;
}

.c31 .uc-fe-pagination-prev-icon,
.c31 .uc-fe-pagination-next-icon {
  cursor: inherit;
}

.c31 .uc-fe-pagination-options,
.c31 .uc-fe-pagination-options-size-changer,
.c31 .uc-fe-pagination-options-quick-jumper {
  display: inline-block;
  vertical-align: middle;
}

.c31 .uc-fe-pagination-options-size-changer {
  margin-right: 5px;
}

.c31 .uc-fe-pagination-options-gobutton {
  margin-left: 5px;
}

.c31 .uc-fe-pagination-quick-jumper-text,
.c31 .uc-fe-pagination-options-quick-jumper-text {
  color: #6b798e;
}

.c10 {
  margin-right: 8px;
  font-size: 14px;
}

.c8 {
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c11 {
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c11 .c9 {
  color: #4074e1;
}

.c6 .c7,
.c6 .style__RadioTagWrap-VWxju {
  margin-right: 8px;
}

.c6 .c7:last-child,
.c6 .style__RadioTagWrap-VWxju:last-child {
  margin-right: 0;
}

.c6 .style__RadioButtonWrap-sjeVo {
  margin-right: -1px;
}

.c6 .style__RadioButtonWrap-sjeVo:first-child {
  border-radius: 2px 0 0 2px;
}

.c6 .style__RadioButtonWrap-sjeVo:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.c14 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.c16 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.c18 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.c20 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c22 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c12 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #fff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  line-height: 16px;
}

.c12:hover {
  border-color: #4683e6;
}

.c12 .c19 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 20px;
  height: 20px;
}

.c12 .c21 {
  background-color: #e69b9b;
  left: 13px;
  height: 10px;
}

.c12 .c13 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.c12 .c15,
.c12 .c17 {
  line-height: 16px;
}

.c12 .c15 {
  padding-right: 20px;
}

.c12 .c17 {
  padding-left: 20px;
}

.c12 .c15 {
  display: none;
}

.c4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 83.33333333%;
}

.c1 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c1:before,
.c1:after {
  content: ' ';
  display: table;
}

.c1:after {
  clear: both;
}

.c1 .c3 {
  padding-left: 8px;
  padding-right: 8px;
}

.c0 {
  margin-bottom: 16px;
}

.c0:last-child {
  margin-bottom: 0;
}

.c2 {
  padding-top: 5px;
  line-height: 1.5;
  word-break: break-all;
}

<div>
  <form
    class="demo-form"
  >
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="2"
      >
        size
      </div>
      <div
        class="c3 c5"
        span="10"
      >
        <div
          class="c6"
        >
          <div
            class="c7 c8"
          >
            <i
              class="icon__circle c9 c10 "
            />
            sm
          </div>
          <div
            checked=""
            class="c7 c11"
          >
            <i
              class="icon__cbox-ed c9 c10 "
            />
            md
          </div>
          <div
            class="c7 c8"
          >
            <i
              class="icon__circle c9 c10 "
            />
            lg
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="2"
      >
        showTitle
      </div>
      <div
        class="c3 c5"
        span="10"
      >
        <div
          class="c12"
        >
          <div
            class="c13 c14"
          >
            <span
              class="c15 c16"
            >
              ON
            </span>
            <span
              class="c17 c18"
            >
              OFF
            </span>
            <span
              class="c19 c20"
            >
              <span
                class="c21 c22"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="2"
      >
        showQuickJumper
      </div>
      <div
        class="c3 c5"
        span="10"
      >
        <div
          class="c12"
        >
          <div
            class="c13 c14"
          >
            <span
              class="c15 c16"
            >
              ON
            </span>
            <span
              class="c17 c18"
            >
              OFF
            </span>
            <span
              class="c19 c20"
            >
              <span
                class="c21 c22"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="2"
      >
        goButton
      </div>
      <div
        class="c3 c5"
        span="10"
      >
        <div
          class="c12"
        >
          <div
            class="c13 c14"
          >
            <span
              class="c15 c16"
            >
              ON
            </span>
            <span
              class="c17 c18"
            >
              OFF
            </span>
            <span
              class="c19 c20"
            >
              <span
                class="c21 c22"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="2"
      >
        showSizeChanger
      </div>
      <div
        class="c3 c5"
        span="10"
      >
        <div
          class="c12"
        >
          <div
            class="c13 c14"
          >
            <span
              class="c15 c16"
            >
              ON
            </span>
            <span
              class="c17 c18"
            >
              OFF
            </span>
            <span
              class="c19 c20"
            >
              <span
                class="c21 c22"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="2"
      >
        showPrevNextJumpers
      </div>
      <div
        class="c3 c5"
        span="10"
      >
        <div
          class="c12"
        >
          <div
            class="c13 c14"
          >
            <span
              class="c15 c16"
            >
              ON
            </span>
            <span
              class="c17 c18"
            >
              OFF
            </span>
            <span
              class="c19 c20"
            >
              <span
                class="c21 c22"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="2"
      >
        simple
      </div>
      <div
        class="c3 c5"
        span="10"
      >
        <div
          class="c12"
        >
          <div
            class="c13 c14"
          >
            <span
              class="c15 c16"
            >
              ON
            </span>
            <span
              class="c17 c18"
            >
              OFF
            </span>
            <span
              class="c19 c20"
            >
              <span
                class="c21 c22"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="2"
      >
        total
      </div>
      <div
        class="c3 c5"
        span="10"
      >
        <div
          class="c23"
        >
          <div>
            <span
              class="c24 c25"
              unselectable="unselectable"
            >
              <i
                class="icon__caret-up "
              />
            </span>
            <span
              class="c26 c27"
              unselectable="unselectable"
            >
              <i
                class="icon__caret-down "
              />
            </span>
          </div>
          <div
            class="c28"
          >
            <input
              autocomplete="off"
              class="c29 c30"
              min="-9007199254740991"
              step="1"
              value="100"
            />
          </div>
        </div>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <ul
      class="uc-fe-pagination uc-fe-pagination-md c31"
      unselectable="unselectable"
    >
      <li
        aria-disabled="true"
        class="uc-fe-pagination-disabled uc-fe-pagination-prev"
      >
        <i
          class="icon__left uc-fe-pagination-prev-icon "
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-1 uc-fe-pagination-item-active"
        tabindex="0"
      >
        <a>
          1
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-2"
        tabindex="0"
      >
        <a>
          2
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-3"
        tabindex="0"
      >
        <a>
          3
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-4"
        tabindex="0"
      >
        <a>
          4
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-5 uc-fe-pagination-item-before-jump-next"
        tabindex="0"
      >
        <a>
          5
        </a>
      </li>
      <li
        aria-disabled="false"
        class=" uc-fe-pagination-next"
        tabindex="0"
      >
        <i
          class="icon__right uc-fe-pagination-next-icon "
        />
      </li>
    </ul>
  </div>
</div>
`;

exports[`Pagination demo -- showLessItems 1`] = `
.c0 {
  color: #6b798e;
  font-size: 12px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: inline-block;
  vertical-align: middle;
}

.c0 .uc-fe-pagination-item,
.c0 .uc-fe-pagination-prev,
.c0 .uc-fe-pagination-next,
.c0 .uc-fe-pagination-jump-prev,
.c0 .uc-fe-pagination-jump-next {
  outline: none;
  box-sizing: border-box;
  background-color: #fff;
  text-align: center;
  border-radius: 2px;
  margin-right: 5px;
  cursor: pointer;
  padding: 0 2px;
  display: inline-block;
  vertical-align: middle;
  min-width: 28px;
  height: 28px;
  line-height: 26px;
}

.c0 .uc-fe-pagination-item,
.c0 .uc-fe-pagination-prev,
.c0 .uc-fe-pagination-next {
  border: 1px solid #c3cad9;
}

.c0 .uc-fe-pagination-item:hover,
.c0 .uc-fe-pagination-prev:hover,
.c0 .uc-fe-pagination-next:hover {
  border-color: #4683e6;
  color: #fff;
  background-color: #4683e6;
}

.c0 .uc-fe-pagination-jump-prev:hover,
.c0 .uc-fe-pagination-jump-next:hover {
  color: #4074e1;
}

.c0 .uc-fe-pagination-item-active,
.c0 .uc-fe-pagination-item-active:hover {
  border-color: #4683e6;
  color: #4074e1;
  background-color: #f4f9ff;
  cursor: default;
}

.c0 .uc-fe-pagination-disabled,
.c0 .uc-fe-pagination-disabled:hover {
  border-color: #d9d9d9;
  background-color: #f7f7f7;
  color: #bbb;
  cursor: not-allowed;
}

.c0 .uc-fe-pagination-prev-icon,
.c0 .uc-fe-pagination-next-icon {
  cursor: inherit;
}

.c0 .uc-fe-pagination-options,
.c0 .uc-fe-pagination-options-size-changer,
.c0 .uc-fe-pagination-options-quick-jumper {
  display: inline-block;
  vertical-align: middle;
}

.c0 .uc-fe-pagination-options-size-changer {
  margin-right: 5px;
}

.c0 .uc-fe-pagination-options-gobutton {
  margin-left: 5px;
}

.c0 .uc-fe-pagination-quick-jumper-text,
.c0 .uc-fe-pagination-options-quick-jumper-text {
  color: #6b798e;
}

<div>
  <div
    class="demo-wrap"
  >
    <ul
      class="uc-fe-pagination uc-fe-pagination-md c0"
      unselectable="unselectable"
    >
      <li
        aria-disabled="true"
        class="uc-fe-pagination-disabled uc-fe-pagination-prev"
        title="上一页"
      >
        <i
          class="icon__left uc-fe-pagination-prev-icon "
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-1 uc-fe-pagination-item-active"
        tabindex="0"
        title="1"
      >
        <a>
          1
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-2"
        tabindex="0"
        title="2"
      >
        <a>
          2
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-3"
        tabindex="0"
        title="3"
      >
        <a>
          3
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-4"
        tabindex="0"
        title="4"
      >
        <a>
          4
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-5 uc-fe-pagination-item-before-jump-next"
        tabindex="0"
        title="5"
      >
        <a>
          5
        </a>
      </li>
      <li
        class="uc-fe-pagination-jump-next"
        tabindex="0"
        title="向后 5 页"
      >
        <i
          class="icon__more-three uc-fe-pagination-jump-icon "
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-10"
        tabindex="0"
        title="10"
      >
        <a>
          10
        </a>
      </li>
      <li
        aria-disabled="false"
        class=" uc-fe-pagination-next"
        tabindex="0"
        title="下一页"
      >
        <i
          class="icon__right uc-fe-pagination-next-icon "
        />
      </li>
    </ul>
  </div>
  <div
    class="demo-wrap"
  >
    <ul
      class="uc-fe-pagination uc-fe-pagination-md c0"
      unselectable="unselectable"
    >
      <li
        aria-disabled="true"
        class="uc-fe-pagination-disabled uc-fe-pagination-prev"
        title="上一页"
      >
        <i
          class="icon__left uc-fe-pagination-prev-icon "
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-1 uc-fe-pagination-item-active"
        tabindex="0"
        title="1"
      >
        <a>
          1
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-2"
        tabindex="0"
        title="2"
      >
        <a>
          2
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-3 uc-fe-pagination-item-before-jump-next"
        tabindex="0"
        title="3"
      >
        <a>
          3
        </a>
      </li>
      <li
        class="uc-fe-pagination-jump-next"
        tabindex="0"
        title="向后 3 页"
      >
        <i
          class="icon__more-three uc-fe-pagination-jump-icon "
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-10"
        tabindex="0"
        title="10"
      >
        <a>
          10
        </a>
      </li>
      <li
        aria-disabled="false"
        class=" uc-fe-pagination-next"
        tabindex="0"
        title="下一页"
      >
        <i
          class="icon__right uc-fe-pagination-next-icon "
        />
      </li>
    </ul>
  </div>
</div>
`;

exports[`Pagination demo -- showPrevNextJumpers 1`] = `
.c0 {
  color: #6b798e;
  font-size: 12px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: inline-block;
  vertical-align: middle;
}

.c0 .uc-fe-pagination-item,
.c0 .uc-fe-pagination-prev,
.c0 .uc-fe-pagination-next,
.c0 .uc-fe-pagination-jump-prev,
.c0 .uc-fe-pagination-jump-next {
  outline: none;
  box-sizing: border-box;
  background-color: #fff;
  text-align: center;
  border-radius: 2px;
  margin-right: 5px;
  cursor: pointer;
  padding: 0 2px;
  display: inline-block;
  vertical-align: middle;
  min-width: 28px;
  height: 28px;
  line-height: 26px;
}

.c0 .uc-fe-pagination-item,
.c0 .uc-fe-pagination-prev,
.c0 .uc-fe-pagination-next {
  border: 1px solid #c3cad9;
}

.c0 .uc-fe-pagination-item:hover,
.c0 .uc-fe-pagination-prev:hover,
.c0 .uc-fe-pagination-next:hover {
  border-color: #4683e6;
  color: #fff;
  background-color: #4683e6;
}

.c0 .uc-fe-pagination-jump-prev:hover,
.c0 .uc-fe-pagination-jump-next:hover {
  color: #4074e1;
}

.c0 .uc-fe-pagination-item-active,
.c0 .uc-fe-pagination-item-active:hover {
  border-color: #4683e6;
  color: #4074e1;
  background-color: #f4f9ff;
  cursor: default;
}

.c0 .uc-fe-pagination-disabled,
.c0 .uc-fe-pagination-disabled:hover {
  border-color: #d9d9d9;
  background-color: #f7f7f7;
  color: #bbb;
  cursor: not-allowed;
}

.c0 .uc-fe-pagination-prev-icon,
.c0 .uc-fe-pagination-next-icon {
  cursor: inherit;
}

.c0 .uc-fe-pagination-options,
.c0 .uc-fe-pagination-options-size-changer,
.c0 .uc-fe-pagination-options-quick-jumper {
  display: inline-block;
  vertical-align: middle;
}

.c0 .uc-fe-pagination-options-size-changer {
  margin-right: 5px;
}

.c0 .uc-fe-pagination-options-gobutton {
  margin-left: 5px;
}

.c0 .uc-fe-pagination-quick-jumper-text,
.c0 .uc-fe-pagination-options-quick-jumper-text {
  color: #6b798e;
}

<div>
  <div
    class="demo-wrap"
  >
    <ul
      class="uc-fe-pagination uc-fe-pagination-md c0"
      unselectable="unselectable"
    >
      <li
        aria-disabled="true"
        class="uc-fe-pagination-disabled uc-fe-pagination-prev"
        title="上一页"
      >
        <i
          class="icon__left uc-fe-pagination-prev-icon "
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-1 uc-fe-pagination-item-active"
        tabindex="0"
        title="1"
      >
        <a>
          1
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-2"
        tabindex="0"
        title="2"
      >
        <a>
          2
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-3"
        tabindex="0"
        title="3"
      >
        <a>
          3
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-4"
        tabindex="0"
        title="4"
      >
        <a>
          4
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-5 uc-fe-pagination-item-before-jump-next"
        tabindex="0"
        title="5"
      >
        <a>
          5
        </a>
      </li>
      <li
        class="uc-fe-pagination-jump-next"
        tabindex="0"
        title="向后 5 页"
      >
        <i
          class="icon__more-three uc-fe-pagination-jump-icon "
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-10"
        tabindex="0"
        title="10"
      >
        <a>
          10
        </a>
      </li>
      <li
        aria-disabled="false"
        class=" uc-fe-pagination-next"
        tabindex="0"
        title="下一页"
      >
        <i
          class="icon__right uc-fe-pagination-next-icon "
        />
      </li>
    </ul>
  </div>
  <div
    class="demo-wrap"
  >
    <ul
      class="uc-fe-pagination uc-fe-pagination-md c0"
      unselectable="unselectable"
    >
      <li
        aria-disabled="true"
        class="uc-fe-pagination-disabled uc-fe-pagination-prev"
        title="上一页"
      >
        <i
          class="icon__left uc-fe-pagination-prev-icon "
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-1 uc-fe-pagination-item-active"
        tabindex="0"
        title="1"
      >
        <a>
          1
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-2"
        tabindex="0"
        title="2"
      >
        <a>
          2
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-3"
        tabindex="0"
        title="3"
      >
        <a>
          3
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-4"
        tabindex="0"
        title="4"
      >
        <a>
          4
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-5 uc-fe-pagination-item-before-jump-next"
        tabindex="0"
        title="5"
      >
        <a>
          5
        </a>
      </li>
      <li
        aria-disabled="false"
        class=" uc-fe-pagination-next"
        tabindex="0"
        title="下一页"
      >
        <i
          class="icon__right uc-fe-pagination-next-icon "
        />
      </li>
    </ul>
  </div>
</div>
`;

exports[`Pagination demo -- showQuickJumper 1`] = `
.c2 {
  position: relative;
}

.c4 {
  border: none;
  outline: none;
  padding: 0;
  color: inherit;
}

.c6 {
  color: #c3cad9;
  margin: 0 4px;
  display: inline-block;
  vertical-align: middle;
}

.kfzOho .c3 {
  line-height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.kfzOho .c3::-webkit-input-placeholder {
  color: #abb4c3;
}

.kfzOho .c3::-moz-placeholder {
  color: #abb4c3;
}

.kfzOho .c3:-ms-input-placeholder {
  color: #abb4c3;
}

.kfzOho .c3::placeholder {
  color: #abb4c3;
}

.kfzOho .c3 {
  padding: 0 0 0 8px;
  text-align: left;
  width: 34px;
}

.c1 {
  position: relative;
  box-sizing: border-box;
  border-radius: 2px;
  display: inline-block;
  vertical-align: middle;
  color: #6b798e;
  height: 28px;
  padding: 0 28px;
  padding: 0;
  margin: 0;
}

.c1 .c3 {
  line-height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.c1 .c3::-webkit-input-placeholder {
  color: #abb4c3;
}

.c1 .c3::-moz-placeholder {
  color: #abb4c3;
}

.c1 .c3:-ms-input-placeholder {
  color: #abb4c3;
}

.c1 .c3::placeholder {
  color: #abb4c3;
}

.c1 .style__HandlerUp-laNuFx,
.c1 .style__HandlerDown-gQSTYw {
  border-color: #c3cad9;
}

.c1 .c3 {
  text-align: center;
  border: 1px solid #c3cad9;
  margin: 0 4px;
  height: 26px;
  width: 26px;
}

.c1 .c3:hover {
  border-color: #4683e6;
  z-index: 1;
}

.c1 .style__HandlerUp-laNuFx,
.c1 .style__HandlerDown-gQSTYw {
  text-align: center;
  top: 0;
  height: 28px;
  width: 28px;
  line-height: 26px;
}

.c1 .style__HandlerUp-laNuFx:hover,
.c1 .style__HandlerDown-gQSTYw:hover {
  color: #4074e1;
  border-color: #4683e6;
  z-index: 1;
}

.c1 .style__HandlerUp-laNuFx {
  right: 0;
  border-width: 1px;
}

.c1 .style__HandlerDown-gQSTYw {
  left: 0;
  border-width: 1px;
}

.c1 .c5 {
  margin-left: 0;
}

.c1 .c3 {
  margin: 0;
}

.c1 .c5 {
  margin-left: 4px;
  margin-right: 0px;
}

.c7 {
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 12px;
  cursor: pointer;
  outline: none;
  display: inline-block;
  vertical-align: middle;
  color: #fff;
  border-color: #4683e6;
  background: #4683e6;
  height: 28px;
  line-height: 26px;
  padding: 0 8px;
}

.c7:hover {
  color: #fff;
  border-color: #3664c8;
  background: #3664c8;
}

.c7[disabled] {
  border-color: #d9d9d9;
  background: #f7f7f7;
  color: #bbb;
  cursor: not-allowed;
  pointer-events: none;
}

.c0 {
  color: #6b798e;
  font-size: 12px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: inline-block;
  vertical-align: middle;
}

.c0 .uc-fe-pagination-item,
.c0 .uc-fe-pagination-prev,
.c0 .uc-fe-pagination-next,
.c0 .uc-fe-pagination-jump-prev,
.c0 .uc-fe-pagination-jump-next {
  outline: none;
  box-sizing: border-box;
  background-color: #fff;
  text-align: center;
  border-radius: 2px;
  margin-right: 5px;
  cursor: pointer;
  padding: 0 2px;
  display: inline-block;
  vertical-align: middle;
  min-width: 28px;
  height: 28px;
  line-height: 26px;
}

.c0 .uc-fe-pagination-item,
.c0 .uc-fe-pagination-prev,
.c0 .uc-fe-pagination-next {
  border: 1px solid #c3cad9;
}

.c0 .uc-fe-pagination-item:hover,
.c0 .uc-fe-pagination-prev:hover,
.c0 .uc-fe-pagination-next:hover {
  border-color: #4683e6;
  color: #fff;
  background-color: #4683e6;
}

.c0 .uc-fe-pagination-jump-prev:hover,
.c0 .uc-fe-pagination-jump-next:hover {
  color: #4074e1;
}

.c0 .uc-fe-pagination-item-active,
.c0 .uc-fe-pagination-item-active:hover {
  border-color: #4683e6;
  color: #4074e1;
  background-color: #f4f9ff;
  cursor: default;
}

.c0 .uc-fe-pagination-disabled,
.c0 .uc-fe-pagination-disabled:hover {
  border-color: #d9d9d9;
  background-color: #f7f7f7;
  color: #bbb;
  cursor: not-allowed;
}

.c0 .uc-fe-pagination-prev-icon,
.c0 .uc-fe-pagination-next-icon {
  cursor: inherit;
}

.c0 .uc-fe-pagination-options,
.c0 .uc-fe-pagination-options-size-changer,
.c0 .uc-fe-pagination-options-quick-jumper {
  display: inline-block;
  vertical-align: middle;
}

.c0 .uc-fe-pagination-options-size-changer {
  margin-right: 5px;
}

.c0 .uc-fe-pagination-options-gobutton {
  margin-left: 5px;
}

.c0 .uc-fe-pagination-quick-jumper-text,
.c0 .uc-fe-pagination-options-quick-jumper-text {
  color: #6b798e;
}

<div>
  <div
    class="demo-wrap"
  >
    <ul
      class="uc-fe-pagination uc-fe-pagination-md c0"
      unselectable="unselectable"
    >
      <li
        aria-disabled="true"
        class="uc-fe-pagination-disabled uc-fe-pagination-prev"
        title="上一页"
      >
        <i
          class="icon__left uc-fe-pagination-prev-icon "
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-1 uc-fe-pagination-item-active"
        tabindex="0"
        title="1"
      >
        <a>
          1
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-2"
        tabindex="0"
        title="2"
      >
        <a>
          2
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-3"
        tabindex="0"
        title="3"
      >
        <a>
          3
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-4"
        tabindex="0"
        title="4"
      >
        <a>
          4
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-5 uc-fe-pagination-item-before-jump-next"
        tabindex="0"
        title="5"
      >
        <a>
          5
        </a>
      </li>
      <li
        class="uc-fe-pagination-jump-next"
        tabindex="0"
        title="向后 5 页"
      >
        <i
          class="icon__more-three uc-fe-pagination-jump-icon "
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-10"
        tabindex="0"
        title="10"
      >
        <a>
          10
        </a>
      </li>
      <li
        aria-disabled="false"
        class=" uc-fe-pagination-next"
        tabindex="0"
        title="下一页"
      >
        <i
          class="icon__right uc-fe-pagination-next-icon "
        />
      </li>
    </ul>
  </div>
  <div
    class="demo-wrap"
  >
    <ul
      class="uc-fe-pagination uc-fe-pagination-md c0"
      unselectable="unselectable"
    >
      <li
        aria-disabled="true"
        class="uc-fe-pagination-disabled uc-fe-pagination-prev"
        title="上一页"
      >
        <i
          class="icon__left uc-fe-pagination-prev-icon "
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-1 uc-fe-pagination-item-active"
        tabindex="0"
        title="1"
      >
        <a>
          1
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-2"
        tabindex="0"
        title="2"
      >
        <a>
          2
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-3"
        tabindex="0"
        title="3"
      >
        <a>
          3
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-4"
        tabindex="0"
        title="4"
      >
        <a>
          4
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-5 uc-fe-pagination-item-before-jump-next"
        tabindex="0"
        title="5"
      >
        <a>
          5
        </a>
      </li>
      <li
        class="uc-fe-pagination-jump-next"
        tabindex="0"
        title="向后 5 页"
      >
        <i
          class="icon__more-three uc-fe-pagination-jump-icon "
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-10"
        tabindex="0"
        title="10"
      >
        <a>
          10
        </a>
      </li>
      <li
        aria-disabled="false"
        class=" uc-fe-pagination-next"
        tabindex="0"
        title="下一页"
      >
        <i
          class="icon__right uc-fe-pagination-next-icon "
        />
      </li>
      <li
        class="uc-fe-pagination-options"
      >
        <div
          class="uc-fe-pagination-options-quick-jumper"
        >
          <div
            class="c1"
          >
            <div
              class="c2"
            >
              <input
                autocomplete="off"
                class="c3 c4"
                max="10"
                min="1"
                step="1"
                value=""
              />
              <span
                class="c5 c6"
              >
                <span
                  class="uc-fe-pagination-options-quick-jumper-text"
                >
                  /10
                </span>
              </span>
            </div>
          </div>
        </div>
      </li>
    </ul>
  </div>
  <div
    class="demo-wrap"
  >
    <ul
      class="uc-fe-pagination uc-fe-pagination-md c0"
      unselectable="unselectable"
    >
      <li
        aria-disabled="true"
        class="uc-fe-pagination-disabled uc-fe-pagination-prev"
        title="上一页"
      >
        <i
          class="icon__left uc-fe-pagination-prev-icon "
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-1 uc-fe-pagination-item-active"
        tabindex="0"
        title="1"
      >
        <a>
          1
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-2"
        tabindex="0"
        title="2"
      >
        <a>
          2
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-3"
        tabindex="0"
        title="3"
      >
        <a>
          3
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-4"
        tabindex="0"
        title="4"
      >
        <a>
          4
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-5 uc-fe-pagination-item-before-jump-next"
        tabindex="0"
        title="5"
      >
        <a>
          5
        </a>
      </li>
      <li
        class="uc-fe-pagination-jump-next"
        tabindex="0"
        title="向后 5 页"
      >
        <i
          class="icon__more-three uc-fe-pagination-jump-icon "
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-10"
        tabindex="0"
        title="10"
      >
        <a>
          10
        </a>
      </li>
      <li
        aria-disabled="false"
        class=" uc-fe-pagination-next"
        tabindex="0"
        title="下一页"
      >
        <i
          class="icon__right uc-fe-pagination-next-icon "
        />
      </li>
      <li
        class="uc-fe-pagination-options"
      >
        <div
          class="uc-fe-pagination-options-quick-jumper"
        >
          <div
            class="c1"
          >
            <div
              class="c2"
            >
              <input
                autocomplete="off"
                class="c3 c4"
                max="10"
                min="1"
                step="1"
                value=""
              />
              <span
                class="c5 c6"
              >
                <span
                  class="uc-fe-pagination-options-quick-jumper-text"
                >
                  /10
                </span>
              </span>
            </div>
          </div>
          <button
            class="uc-fe-pagination-options-gobutton c7"
            type="button"
          >
            确定
          </button>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Pagination demo -- showSizeChanger 1`] = `
.c3 {
  border-radius: 2px;
  cursor: pointer;
  padding: 0 8px;
  padding-right: 40px;
  box-sizing: border-box;
}

.c4 {
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -6px;
}

.c1 {
  box-sizing: border-box;
  position: relative;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  font-size: 12px;
  color: #6b798e;
  background-color: #fff;
}

.c1 .c2 {
  height: 28px;
  line-height: 28px;
  border: 1px solid #c3cad9;
}

.c1 .c2:hover {
  border-color: #4683e6;
}

.c1 .style__MenuWrap-jpnfrZ {
  background: #fff;
  border: 1px solid #c3cad9;
}

.c0 {
  color: #6b798e;
  font-size: 12px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: inline-block;
  vertical-align: middle;
}

.c0 .uc-fe-pagination-item,
.c0 .uc-fe-pagination-prev,
.c0 .uc-fe-pagination-next,
.c0 .uc-fe-pagination-jump-prev,
.c0 .uc-fe-pagination-jump-next {
  outline: none;
  box-sizing: border-box;
  background-color: #fff;
  text-align: center;
  border-radius: 2px;
  margin-right: 5px;
  cursor: pointer;
  padding: 0 2px;
  display: inline-block;
  vertical-align: middle;
  min-width: 28px;
  height: 28px;
  line-height: 26px;
}

.c0 .uc-fe-pagination-item,
.c0 .uc-fe-pagination-prev,
.c0 .uc-fe-pagination-next {
  border: 1px solid #c3cad9;
}

.c0 .uc-fe-pagination-item:hover,
.c0 .uc-fe-pagination-prev:hover,
.c0 .uc-fe-pagination-next:hover {
  border-color: #4683e6;
  color: #fff;
  background-color: #4683e6;
}

.c0 .uc-fe-pagination-jump-prev:hover,
.c0 .uc-fe-pagination-jump-next:hover {
  color: #4074e1;
}

.c0 .uc-fe-pagination-item-active,
.c0 .uc-fe-pagination-item-active:hover {
  border-color: #4683e6;
  color: #4074e1;
  background-color: #f4f9ff;
  cursor: default;
}

.c0 .uc-fe-pagination-disabled,
.c0 .uc-fe-pagination-disabled:hover {
  border-color: #d9d9d9;
  background-color: #f7f7f7;
  color: #bbb;
  cursor: not-allowed;
}

.c0 .uc-fe-pagination-prev-icon,
.c0 .uc-fe-pagination-next-icon {
  cursor: inherit;
}

.c0 .uc-fe-pagination-options,
.c0 .uc-fe-pagination-options-size-changer,
.c0 .uc-fe-pagination-options-quick-jumper {
  display: inline-block;
  vertical-align: middle;
}

.c0 .uc-fe-pagination-options-size-changer {
  margin-right: 5px;
}

.c0 .uc-fe-pagination-options-gobutton {
  margin-left: 5px;
}

.c0 .uc-fe-pagination-quick-jumper-text,
.c0 .uc-fe-pagination-options-quick-jumper-text {
  color: #6b798e;
}

<div>
  <div
    class="demo-wrap"
  >
    <ul
      class="uc-fe-pagination uc-fe-pagination-md c0"
      unselectable="unselectable"
    >
      <li
        aria-disabled="true"
        class="uc-fe-pagination-disabled uc-fe-pagination-prev"
        title="上一页"
      >
        <i
          class="icon__left uc-fe-pagination-prev-icon "
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-1 uc-fe-pagination-item-active"
        tabindex="0"
        title="1"
      >
        <a>
          1
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-2"
        tabindex="0"
        title="2"
      >
        <a>
          2
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-3"
        tabindex="0"
        title="3"
      >
        <a>
          3
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-4"
        tabindex="0"
        title="4"
      >
        <a>
          4
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-5 uc-fe-pagination-item-before-jump-next"
        tabindex="0"
        title="5"
      >
        <a>
          5
        </a>
      </li>
      <li
        class="uc-fe-pagination-jump-next"
        tabindex="0"
        title="向后 5 页"
      >
        <i
          class="icon__more-three uc-fe-pagination-jump-icon "
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-10"
        tabindex="0"
        title="10"
      >
        <a>
          10
        </a>
      </li>
      <li
        aria-disabled="false"
        class=" uc-fe-pagination-next"
        tabindex="0"
        title="下一页"
      >
        <i
          class="icon__right uc-fe-pagination-next-icon "
        />
      </li>
    </ul>
  </div>
  <div
    class="demo-wrap"
  >
    <ul
      class="uc-fe-pagination uc-fe-pagination-md c0"
      unselectable="unselectable"
    >
      <li
        aria-disabled="true"
        class="uc-fe-pagination-disabled uc-fe-pagination-prev"
        title="上一页"
      >
        <i
          class="icon__left uc-fe-pagination-prev-icon "
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-1 uc-fe-pagination-item-active"
        tabindex="0"
        title="1"
      >
        <a>
          1
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-2"
        tabindex="0"
        title="2"
      >
        <a>
          2
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-3"
        tabindex="0"
        title="3"
      >
        <a>
          3
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-4"
        tabindex="0"
        title="4"
      >
        <a>
          4
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-5 uc-fe-pagination-item-before-jump-next"
        tabindex="0"
        title="5"
      >
        <a>
          5
        </a>
      </li>
      <li
        class="uc-fe-pagination-jump-next"
        tabindex="0"
        title="向后 5 页"
      >
        <i
          class="icon__more-three uc-fe-pagination-jump-icon "
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-10"
        tabindex="0"
        title="10"
      >
        <a>
          10
        </a>
      </li>
      <li
        aria-disabled="false"
        class=" uc-fe-pagination-next"
        tabindex="0"
        title="下一页"
      >
        <i
          class="icon__right uc-fe-pagination-next-icon "
        />
      </li>
      <li
        class="uc-fe-pagination-options"
      >
        <div
          class="uc-fe-pagination-options-size-changer c1"
        >
          <div>
            <div
              class="c2 c3"
            >
              <div>
                10 条/页
              </div>
              <i
                class="icon__down c4 "
              />
            </div>
          </div>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Pagination demo -- showTitle 1`] = `
.c0 {
  color: #6b798e;
  font-size: 12px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: inline-block;
  vertical-align: middle;
}

.c0 .uc-fe-pagination-item,
.c0 .uc-fe-pagination-prev,
.c0 .uc-fe-pagination-next,
.c0 .uc-fe-pagination-jump-prev,
.c0 .uc-fe-pagination-jump-next {
  outline: none;
  box-sizing: border-box;
  background-color: #fff;
  text-align: center;
  border-radius: 2px;
  margin-right: 5px;
  cursor: pointer;
  padding: 0 2px;
  display: inline-block;
  vertical-align: middle;
  min-width: 28px;
  height: 28px;
  line-height: 26px;
}

.c0 .uc-fe-pagination-item,
.c0 .uc-fe-pagination-prev,
.c0 .uc-fe-pagination-next {
  border: 1px solid #c3cad9;
}

.c0 .uc-fe-pagination-item:hover,
.c0 .uc-fe-pagination-prev:hover,
.c0 .uc-fe-pagination-next:hover {
  border-color: #4683e6;
  color: #fff;
  background-color: #4683e6;
}

.c0 .uc-fe-pagination-jump-prev:hover,
.c0 .uc-fe-pagination-jump-next:hover {
  color: #4074e1;
}

.c0 .uc-fe-pagination-item-active,
.c0 .uc-fe-pagination-item-active:hover {
  border-color: #4683e6;
  color: #4074e1;
  background-color: #f4f9ff;
  cursor: default;
}

.c0 .uc-fe-pagination-disabled,
.c0 .uc-fe-pagination-disabled:hover {
  border-color: #d9d9d9;
  background-color: #f7f7f7;
  color: #bbb;
  cursor: not-allowed;
}

.c0 .uc-fe-pagination-prev-icon,
.c0 .uc-fe-pagination-next-icon {
  cursor: inherit;
}

.c0 .uc-fe-pagination-options,
.c0 .uc-fe-pagination-options-size-changer,
.c0 .uc-fe-pagination-options-quick-jumper {
  display: inline-block;
  vertical-align: middle;
}

.c0 .uc-fe-pagination-options-size-changer {
  margin-right: 5px;
}

.c0 .uc-fe-pagination-options-gobutton {
  margin-left: 5px;
}

.c0 .uc-fe-pagination-quick-jumper-text,
.c0 .uc-fe-pagination-options-quick-jumper-text {
  color: #6b798e;
}

<div>
  <div
    class="demo-wrap"
  >
    <ul
      class="uc-fe-pagination uc-fe-pagination-md c0"
      unselectable="unselectable"
    >
      <li
        aria-disabled="true"
        class="uc-fe-pagination-disabled uc-fe-pagination-prev"
        title="上一页"
      >
        <i
          class="icon__left uc-fe-pagination-prev-icon "
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-1 uc-fe-pagination-item-active"
        tabindex="0"
        title="1"
      >
        <a>
          1
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-2"
        tabindex="0"
        title="2"
      >
        <a>
          2
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-3"
        tabindex="0"
        title="3"
      >
        <a>
          3
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-4"
        tabindex="0"
        title="4"
      >
        <a>
          4
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-5 uc-fe-pagination-item-before-jump-next"
        tabindex="0"
        title="5"
      >
        <a>
          5
        </a>
      </li>
      <li
        class="uc-fe-pagination-jump-next"
        tabindex="0"
        title="向后 5 页"
      >
        <i
          class="icon__more-three uc-fe-pagination-jump-icon "
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-10"
        tabindex="0"
        title="10"
      >
        <a>
          10
        </a>
      </li>
      <li
        aria-disabled="false"
        class=" uc-fe-pagination-next"
        tabindex="0"
        title="下一页"
      >
        <i
          class="icon__right uc-fe-pagination-next-icon "
        />
      </li>
    </ul>
  </div>
  <div
    class="demo-wrap"
  >
    <ul
      class="uc-fe-pagination uc-fe-pagination-md c0"
      unselectable="unselectable"
    >
      <li
        aria-disabled="true"
        class="uc-fe-pagination-disabled uc-fe-pagination-prev"
      >
        <i
          class="icon__left uc-fe-pagination-prev-icon "
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-1 uc-fe-pagination-item-active"
        tabindex="0"
      >
        <a>
          1
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-2"
        tabindex="0"
      >
        <a>
          2
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-3"
        tabindex="0"
      >
        <a>
          3
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-4"
        tabindex="0"
      >
        <a>
          4
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-5 uc-fe-pagination-item-before-jump-next"
        tabindex="0"
      >
        <a>
          5
        </a>
      </li>
      <li
        class="uc-fe-pagination-jump-next"
        tabindex="0"
      >
        <i
          class="icon__more-three uc-fe-pagination-jump-icon "
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-10"
        tabindex="0"
      >
        <a>
          10
        </a>
      </li>
      <li
        aria-disabled="false"
        class=" uc-fe-pagination-next"
        tabindex="0"
      >
        <i
          class="icon__right uc-fe-pagination-next-icon "
        />
      </li>
    </ul>
  </div>
</div>
`;

exports[`Pagination demo -- simple 1`] = `
.c6 {
  position: relative;
}

.c8 {
  border: none;
  outline: none;
  padding: 0;
  color: inherit;
}

.c10 {
  color: #c3cad9;
  margin: 0 4px;
  display: inline-block;
  vertical-align: middle;
}

.c3 {
  position: absolute;
  box-sizing: border-box;
  text-align: center;
  border-radius: 2px;
  border-style: solid;
  color: inherit;
  cursor: pointer;
  background: #fff;
  display: inline-block;
  vertical-align: middle;
}

.c5 {
  position: absolute;
  box-sizing: border-box;
  text-align: center;
  border-radius: 2px;
  border-style: solid;
  color: inherit;
  cursor: pointer;
  background: #fff;
  display: inline-block;
  vertical-align: middle;
}

.kfzOho .c7 {
  line-height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.kfzOho .c7::-webkit-input-placeholder {
  color: #abb4c3;
}

.kfzOho .c7::-moz-placeholder {
  color: #abb4c3;
}

.kfzOho .c7:-ms-input-placeholder {
  color: #abb4c3;
}

.kfzOho .c7::placeholder {
  color: #abb4c3;
}

.kfzOho .c2,
.kfzOho .c4 {
  border-color: #c3cad9;
}

.kfzOho .c7 {
  padding: 0 0 0 8px;
  text-align: left;
  width: 34px;
}

.kfzOho .c2,
.kfzOho .c4 {
  right: 0;
  height: 13px;
  line-height: 13px;
  width: 22px;
}

.kfzOho .c2:hover,
.kfzOho .c4:hover {
  color: #4074e1;
}

.kfzOho .c2 {
  border-width: 0 0 0 1px;
  top: 0;
}

.kfzOho .c4 {
  border-width: 1px 0 0 1px;
  bottom: 0;
}

.hJXUuV .c7 {
  line-height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.hJXUuV .c7::-webkit-input-placeholder {
  color: #abb4c3;
}

.hJXUuV .c7::-moz-placeholder {
  color: #abb4c3;
}

.hJXUuV .c7:-ms-input-placeholder {
  color: #abb4c3;
}

.hJXUuV .c7::placeholder {
  color: #abb4c3;
}

.hJXUuV .c2,
.hJXUuV .c4 {
  border-color: #c3cad9;
}

.hJXUuV .c7 {
  text-align: center;
  border: 1px solid #c3cad9;
  margin: 0 4px;
  height: 26px;
  width: 26px;
}

.hJXUuV .c7:hover {
  border-color: #4683e6;
  z-index: 1;
}

.hJXUuV .c2,
.hJXUuV .c4 {
  text-align: center;
  top: 0;
  height: 28px;
  width: 28px;
  line-height: 26px;
}

.hJXUuV .c2:hover,
.hJXUuV .c4:hover {
  color: #4074e1;
  border-color: #4683e6;
  z-index: 1;
}

.hJXUuV .c2 {
  right: 0;
  border-width: 1px;
}

.hJXUuV .c4 {
  left: 0;
  border-width: 1px;
}

.hJXUuV .c9 {
  margin-left: 0;
}

.hJXUuV .c7 {
  margin: 0;
}

.hJXUuV .c9 {
  margin-left: 4px;
  margin-right: 0px;
}

.c1 {
  position: relative;
  box-sizing: border-box;
  border-radius: 2px;
  display: inline-block;
  vertical-align: middle;
  color: #6b798e;
  height: 28px;
  padding: 0 28px;
}

.c1 .c7 {
  line-height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.c1 .c7::-webkit-input-placeholder {
  color: #abb4c3;
}

.c1 .c7::-moz-placeholder {
  color: #abb4c3;
}

.c1 .c7:-ms-input-placeholder {
  color: #abb4c3;
}

.c1 .c7::placeholder {
  color: #abb4c3;
}

.c1 .c2,
.c1 .c4 {
  border-color: #c3cad9;
}

.c1 .c7 {
  text-align: center;
  border: 1px solid #c3cad9;
  margin: 0 4px;
  height: 26px;
  width: 26px;
}

.c1 .c7:hover {
  border-color: #4683e6;
  z-index: 1;
}

.c1 .c2,
.c1 .c4 {
  text-align: center;
  top: 0;
  height: 28px;
  width: 28px;
  line-height: 26px;
}

.c1 .c2:hover,
.c1 .c4:hover {
  color: #4074e1;
  border-color: #4683e6;
  z-index: 1;
}

.c1 .c2 {
  right: 0;
  border-width: 1px;
}

.c1 .c4 {
  left: 0;
  border-width: 1px;
}

.c1 .c9 {
  margin-left: 0;
}

.c0 {
  color: #6b798e;
  font-size: 12px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: inline-block;
  vertical-align: middle;
}

.c0 .uc-fe-pagination-item,
.c0 .uc-fe-pagination-prev,
.c0 .uc-fe-pagination-next,
.c0 .uc-fe-pagination-jump-prev,
.c0 .uc-fe-pagination-jump-next {
  outline: none;
  box-sizing: border-box;
  background-color: #fff;
  text-align: center;
  border-radius: 2px;
  margin-right: 5px;
  cursor: pointer;
  padding: 0 2px;
  display: inline-block;
  vertical-align: middle;
  min-width: 28px;
  height: 28px;
  line-height: 26px;
}

.c0 .uc-fe-pagination-item,
.c0 .uc-fe-pagination-prev,
.c0 .uc-fe-pagination-next {
  border: 1px solid #c3cad9;
}

.c0 .uc-fe-pagination-item:hover,
.c0 .uc-fe-pagination-prev:hover,
.c0 .uc-fe-pagination-next:hover {
  border-color: #4683e6;
  color: #fff;
  background-color: #4683e6;
}

.c0 .uc-fe-pagination-jump-prev:hover,
.c0 .uc-fe-pagination-jump-next:hover {
  color: #4074e1;
}

.c0 .uc-fe-pagination-item-active,
.c0 .uc-fe-pagination-item-active:hover {
  border-color: #4683e6;
  color: #4074e1;
  background-color: #f4f9ff;
  cursor: default;
}

.c0 .uc-fe-pagination-disabled,
.c0 .uc-fe-pagination-disabled:hover {
  border-color: #d9d9d9;
  background-color: #f7f7f7;
  color: #bbb;
  cursor: not-allowed;
}

.c0 .uc-fe-pagination-prev-icon,
.c0 .uc-fe-pagination-next-icon {
  cursor: inherit;
}

.c0 .uc-fe-pagination-options,
.c0 .uc-fe-pagination-options-size-changer,
.c0 .uc-fe-pagination-options-quick-jumper {
  display: inline-block;
  vertical-align: middle;
}

.c0 .uc-fe-pagination-options-size-changer {
  margin-right: 5px;
}

.c0 .uc-fe-pagination-options-gobutton {
  margin-left: 5px;
}

.c0 .uc-fe-pagination-quick-jumper-text,
.c0 .uc-fe-pagination-options-quick-jumper-text {
  color: #6b798e;
}

<div>
  <div
    class="demo-wrap"
  >
    <ul
      class="uc-fe-pagination uc-fe-pagination-md c0"
      unselectable="unselectable"
    >
      <li
        aria-disabled="true"
        class="uc-fe-pagination-disabled uc-fe-pagination-prev"
        title="上一页"
      >
        <i
          class="icon__left uc-fe-pagination-prev-icon "
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-1 uc-fe-pagination-item-active"
        tabindex="0"
        title="1"
      >
        <a>
          1
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-2"
        tabindex="0"
        title="2"
      >
        <a>
          2
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-3"
        tabindex="0"
        title="3"
      >
        <a>
          3
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-4"
        tabindex="0"
        title="4"
      >
        <a>
          4
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-5 uc-fe-pagination-item-before-jump-next"
        tabindex="0"
        title="5"
      >
        <a>
          5
        </a>
      </li>
      <li
        class="uc-fe-pagination-jump-next"
        tabindex="0"
        title="向后 5 页"
      >
        <i
          class="icon__more-three uc-fe-pagination-jump-icon "
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-10"
        tabindex="0"
        title="10"
      >
        <a>
          10
        </a>
      </li>
      <li
        aria-disabled="false"
        class=" uc-fe-pagination-next"
        tabindex="0"
        title="下一页"
      >
        <i
          class="icon__right uc-fe-pagination-next-icon "
        />
      </li>
    </ul>
  </div>
  <div
    class="demo-wrap"
  >
    <ul
      class="uc-fe-pagination uc-fe-pagination-md uc-fe-pagination-simple"
      unselectable="unselectable"
    >
      <div
        class="c1"
      >
        <div>
          <span
            class="c2 c3"
            unselectable="unselectable"
          >
            <i
              class="icon__right "
            />
          </span>
          <span
            class="c4 c5"
            disabled=""
            unselectable="unselectable"
          >
            <i
              class="icon__left "
            />
          </span>
        </div>
        <div
          class="c6"
        >
          <input
            autocomplete="off"
            class="c7 c8"
            max="10"
            min="1"
            step="1"
            value="1"
          />
          <span
            class="c9 c10"
          >
            <span
              class="uc-fe-pagination-quick-jumper-text"
            >
              /10
            </span>
          </span>
        </div>
      </div>
    </ul>
  </div>
</div>
`;

exports[`Pagination demo -- size 1`] = `
.c1 {
  color: #6b798e;
  font-size: 12px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: inline-block;
  vertical-align: middle;
}

.c1 .uc-fe-pagination-item,
.c1 .uc-fe-pagination-prev,
.c1 .uc-fe-pagination-next,
.c1 .uc-fe-pagination-jump-prev,
.c1 .uc-fe-pagination-jump-next {
  outline: none;
  box-sizing: border-box;
  background-color: #fff;
  text-align: center;
  border-radius: 2px;
  margin-right: 5px;
  cursor: pointer;
  padding: 0 2px;
  display: inline-block;
  vertical-align: middle;
  min-width: 28px;
  height: 28px;
  line-height: 26px;
}

.c1 .uc-fe-pagination-item,
.c1 .uc-fe-pagination-prev,
.c1 .uc-fe-pagination-next {
  border: 1px solid #c3cad9;
}

.c1 .uc-fe-pagination-item:hover,
.c1 .uc-fe-pagination-prev:hover,
.c1 .uc-fe-pagination-next:hover {
  border-color: #4683e6;
  color: #fff;
  background-color: #4683e6;
}

.c1 .uc-fe-pagination-jump-prev:hover,
.c1 .uc-fe-pagination-jump-next:hover {
  color: #4074e1;
}

.c1 .uc-fe-pagination-item-active,
.c1 .uc-fe-pagination-item-active:hover {
  border-color: #4683e6;
  color: #4074e1;
  background-color: #f4f9ff;
  cursor: default;
}

.c1 .uc-fe-pagination-disabled,
.c1 .uc-fe-pagination-disabled:hover {
  border-color: #d9d9d9;
  background-color: #f7f7f7;
  color: #bbb;
  cursor: not-allowed;
}

.c1 .uc-fe-pagination-prev-icon,
.c1 .uc-fe-pagination-next-icon {
  cursor: inherit;
}

.c1 .uc-fe-pagination-options,
.c1 .uc-fe-pagination-options-size-changer,
.c1 .uc-fe-pagination-options-quick-jumper {
  display: inline-block;
  vertical-align: middle;
}

.c1 .uc-fe-pagination-options-size-changer {
  margin-right: 5px;
}

.c1 .uc-fe-pagination-options-gobutton {
  margin-left: 5px;
}

.c1 .uc-fe-pagination-quick-jumper-text,
.c1 .uc-fe-pagination-options-quick-jumper-text {
  color: #6b798e;
}

.c0 {
  color: #6b798e;
  font-size: 12px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: inline-block;
  vertical-align: middle;
}

.c0 .uc-fe-pagination-item,
.c0 .uc-fe-pagination-prev,
.c0 .uc-fe-pagination-next,
.c0 .uc-fe-pagination-jump-prev,
.c0 .uc-fe-pagination-jump-next {
  outline: none;
  box-sizing: border-box;
  background-color: #fff;
  text-align: center;
  border-radius: 2px;
  margin-right: 5px;
  cursor: pointer;
  padding: 0 2px;
  display: inline-block;
  vertical-align: middle;
  min-width: 22px;
  height: 22px;
  line-height: 20px;
}

.c0 .uc-fe-pagination-item,
.c0 .uc-fe-pagination-prev,
.c0 .uc-fe-pagination-next {
  border: 1px solid #c3cad9;
}

.c0 .uc-fe-pagination-item:hover,
.c0 .uc-fe-pagination-prev:hover,
.c0 .uc-fe-pagination-next:hover {
  border-color: #4683e6;
  color: #fff;
  background-color: #4683e6;
}

.c0 .uc-fe-pagination-jump-prev:hover,
.c0 .uc-fe-pagination-jump-next:hover {
  color: #4074e1;
}

.c0 .uc-fe-pagination-item-active,
.c0 .uc-fe-pagination-item-active:hover {
  border-color: #4683e6;
  color: #4074e1;
  background-color: #f4f9ff;
  cursor: default;
}

.c0 .uc-fe-pagination-disabled,
.c0 .uc-fe-pagination-disabled:hover {
  border-color: #d9d9d9;
  background-color: #f7f7f7;
  color: #bbb;
  cursor: not-allowed;
}

.c0 .uc-fe-pagination-prev-icon,
.c0 .uc-fe-pagination-next-icon {
  cursor: inherit;
}

.c0 .uc-fe-pagination-options,
.c0 .uc-fe-pagination-options-size-changer,
.c0 .uc-fe-pagination-options-quick-jumper {
  display: inline-block;
  vertical-align: middle;
}

.c0 .uc-fe-pagination-options-size-changer {
  margin-right: 5px;
}

.c0 .uc-fe-pagination-options-gobutton {
  margin-left: 5px;
}

.c0 .uc-fe-pagination-quick-jumper-text,
.c0 .uc-fe-pagination-options-quick-jumper-text {
  color: #6b798e;
}

.c2 {
  color: #6b798e;
  font-size: 12px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: inline-block;
  vertical-align: middle;
}

.c2 .uc-fe-pagination-item,
.c2 .uc-fe-pagination-prev,
.c2 .uc-fe-pagination-next,
.c2 .uc-fe-pagination-jump-prev,
.c2 .uc-fe-pagination-jump-next {
  outline: none;
  box-sizing: border-box;
  background-color: #fff;
  text-align: center;
  border-radius: 2px;
  margin-right: 5px;
  cursor: pointer;
  padding: 0 2px;
  display: inline-block;
  vertical-align: middle;
  min-width: 34px;
  height: 34px;
  line-height: 32px;
}

.c2 .uc-fe-pagination-item,
.c2 .uc-fe-pagination-prev,
.c2 .uc-fe-pagination-next {
  border: 1px solid #c3cad9;
}

.c2 .uc-fe-pagination-item:hover,
.c2 .uc-fe-pagination-prev:hover,
.c2 .uc-fe-pagination-next:hover {
  border-color: #4683e6;
  color: #fff;
  background-color: #4683e6;
}

.c2 .uc-fe-pagination-jump-prev:hover,
.c2 .uc-fe-pagination-jump-next:hover {
  color: #4074e1;
}

.c2 .uc-fe-pagination-item-active,
.c2 .uc-fe-pagination-item-active:hover {
  border-color: #4683e6;
  color: #4074e1;
  background-color: #f4f9ff;
  cursor: default;
}

.c2 .uc-fe-pagination-disabled,
.c2 .uc-fe-pagination-disabled:hover {
  border-color: #d9d9d9;
  background-color: #f7f7f7;
  color: #bbb;
  cursor: not-allowed;
}

.c2 .uc-fe-pagination-prev-icon,
.c2 .uc-fe-pagination-next-icon {
  cursor: inherit;
}

.c2 .uc-fe-pagination-options,
.c2 .uc-fe-pagination-options-size-changer,
.c2 .uc-fe-pagination-options-quick-jumper {
  display: inline-block;
  vertical-align: middle;
}

.c2 .uc-fe-pagination-options-size-changer {
  margin-right: 5px;
}

.c2 .uc-fe-pagination-options-gobutton {
  margin-left: 5px;
}

.c2 .uc-fe-pagination-quick-jumper-text,
.c2 .uc-fe-pagination-options-quick-jumper-text {
  color: #6b798e;
}

<div>
  <div
    class="demo-wrap"
  >
    <ul
      class="uc-fe-pagination uc-fe-pagination-sm c0"
      unselectable="unselectable"
    >
      <li
        aria-disabled="true"
        class="uc-fe-pagination-disabled uc-fe-pagination-prev"
        title="上一页"
      >
        <i
          class="icon__left uc-fe-pagination-prev-icon "
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-1 uc-fe-pagination-item-active"
        tabindex="0"
        title="1"
      >
        <a>
          1
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-2"
        tabindex="0"
        title="2"
      >
        <a>
          2
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-3"
        tabindex="0"
        title="3"
      >
        <a>
          3
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-4"
        tabindex="0"
        title="4"
      >
        <a>
          4
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-5 uc-fe-pagination-item-before-jump-next"
        tabindex="0"
        title="5"
      >
        <a>
          5
        </a>
      </li>
      <li
        class="uc-fe-pagination-jump-next"
        tabindex="0"
        title="向后 5 页"
      >
        <i
          class="icon__more-three uc-fe-pagination-jump-icon "
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-10"
        tabindex="0"
        title="10"
      >
        <a>
          10
        </a>
      </li>
      <li
        aria-disabled="false"
        class=" uc-fe-pagination-next"
        tabindex="0"
        title="下一页"
      >
        <i
          class="icon__right uc-fe-pagination-next-icon "
        />
      </li>
    </ul>
  </div>
  <div
    class="demo-wrap"
  >
    <ul
      class="uc-fe-pagination uc-fe-pagination-md c1"
      unselectable="unselectable"
    >
      <li
        aria-disabled="true"
        class="uc-fe-pagination-disabled uc-fe-pagination-prev"
        title="上一页"
      >
        <i
          class="icon__left uc-fe-pagination-prev-icon "
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-1 uc-fe-pagination-item-active"
        tabindex="0"
        title="1"
      >
        <a>
          1
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-2"
        tabindex="0"
        title="2"
      >
        <a>
          2
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-3"
        tabindex="0"
        title="3"
      >
        <a>
          3
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-4"
        tabindex="0"
        title="4"
      >
        <a>
          4
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-5 uc-fe-pagination-item-before-jump-next"
        tabindex="0"
        title="5"
      >
        <a>
          5
        </a>
      </li>
      <li
        class="uc-fe-pagination-jump-next"
        tabindex="0"
        title="向后 5 页"
      >
        <i
          class="icon__more-three uc-fe-pagination-jump-icon "
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-10"
        tabindex="0"
        title="10"
      >
        <a>
          10
        </a>
      </li>
      <li
        aria-disabled="false"
        class=" uc-fe-pagination-next"
        tabindex="0"
        title="下一页"
      >
        <i
          class="icon__right uc-fe-pagination-next-icon "
        />
      </li>
    </ul>
  </div>
  <div
    class="demo-wrap"
  >
    <ul
      class="uc-fe-pagination uc-fe-pagination-lg c2"
      unselectable="unselectable"
    >
      <li
        aria-disabled="true"
        class="uc-fe-pagination-disabled uc-fe-pagination-prev"
        title="上一页"
      >
        <i
          class="icon__left uc-fe-pagination-prev-icon "
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-1 uc-fe-pagination-item-active"
        tabindex="0"
        title="1"
      >
        <a>
          1
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-2"
        tabindex="0"
        title="2"
      >
        <a>
          2
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-3"
        tabindex="0"
        title="3"
      >
        <a>
          3
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-4"
        tabindex="0"
        title="4"
      >
        <a>
          4
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-5 uc-fe-pagination-item-before-jump-next"
        tabindex="0"
        title="5"
      >
        <a>
          5
        </a>
      </li>
      <li
        class="uc-fe-pagination-jump-next"
        tabindex="0"
        title="向后 5 页"
      >
        <i
          class="icon__more-three uc-fe-pagination-jump-icon "
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-10"
        tabindex="0"
        title="10"
      >
        <a>
          10
        </a>
      </li>
      <li
        aria-disabled="false"
        class=" uc-fe-pagination-next"
        tabindex="0"
        title="下一页"
      >
        <i
          class="icon__right uc-fe-pagination-next-icon "
        />
      </li>
    </ul>
  </div>
</div>
`;

exports[`Pagination demo -- total 1`] = `
.c0 {
  color: #6b798e;
  font-size: 12px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: inline-block;
  vertical-align: middle;
}

.c0 .uc-fe-pagination-item,
.c0 .uc-fe-pagination-prev,
.c0 .uc-fe-pagination-next,
.c0 .uc-fe-pagination-jump-prev,
.c0 .uc-fe-pagination-jump-next {
  outline: none;
  box-sizing: border-box;
  background-color: #fff;
  text-align: center;
  border-radius: 2px;
  margin-right: 5px;
  cursor: pointer;
  padding: 0 2px;
  display: inline-block;
  vertical-align: middle;
  min-width: 28px;
  height: 28px;
  line-height: 26px;
}

.c0 .uc-fe-pagination-item,
.c0 .uc-fe-pagination-prev,
.c0 .uc-fe-pagination-next {
  border: 1px solid #c3cad9;
}

.c0 .uc-fe-pagination-item:hover,
.c0 .uc-fe-pagination-prev:hover,
.c0 .uc-fe-pagination-next:hover {
  border-color: #4683e6;
  color: #fff;
  background-color: #4683e6;
}

.c0 .uc-fe-pagination-jump-prev:hover,
.c0 .uc-fe-pagination-jump-next:hover {
  color: #4074e1;
}

.c0 .uc-fe-pagination-item-active,
.c0 .uc-fe-pagination-item-active:hover {
  border-color: #4683e6;
  color: #4074e1;
  background-color: #f4f9ff;
  cursor: default;
}

.c0 .uc-fe-pagination-disabled,
.c0 .uc-fe-pagination-disabled:hover {
  border-color: #d9d9d9;
  background-color: #f7f7f7;
  color: #bbb;
  cursor: not-allowed;
}

.c0 .uc-fe-pagination-prev-icon,
.c0 .uc-fe-pagination-next-icon {
  cursor: inherit;
}

.c0 .uc-fe-pagination-options,
.c0 .uc-fe-pagination-options-size-changer,
.c0 .uc-fe-pagination-options-quick-jumper {
  display: inline-block;
  vertical-align: middle;
}

.c0 .uc-fe-pagination-options-size-changer {
  margin-right: 5px;
}

.c0 .uc-fe-pagination-options-gobutton {
  margin-left: 5px;
}

.c0 .uc-fe-pagination-quick-jumper-text,
.c0 .uc-fe-pagination-options-quick-jumper-text {
  color: #6b798e;
}

<div>
  <div
    class="demo-wrap"
  >
    <ul
      class="uc-fe-pagination uc-fe-pagination-md c0"
      unselectable="unselectable"
    >
      <li
        aria-disabled="true"
        class="uc-fe-pagination-disabled uc-fe-pagination-prev"
        title="上一页"
      >
        <i
          class="icon__left uc-fe-pagination-prev-icon "
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-1 uc-fe-pagination-item-active"
        tabindex="0"
        title="1"
      >
        <a>
          1
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-2"
        tabindex="0"
        title="2"
      >
        <a>
          2
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-3"
        tabindex="0"
        title="3"
      >
        <a>
          3
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-4"
        tabindex="0"
        title="4"
      >
        <a>
          4
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-5 uc-fe-pagination-item-before-jump-next"
        tabindex="0"
        title="5"
      >
        <a>
          5
        </a>
      </li>
      <li
        class="uc-fe-pagination-jump-next"
        tabindex="0"
        title="向后 5 页"
      >
        <i
          class="icon__more-three uc-fe-pagination-jump-icon "
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-10"
        tabindex="0"
        title="10"
      >
        <a>
          10
        </a>
      </li>
      <li
        aria-disabled="false"
        class=" uc-fe-pagination-next"
        tabindex="0"
        title="下一页"
      >
        <i
          class="icon__right uc-fe-pagination-next-icon "
        />
      </li>
    </ul>
  </div>
  <div
    class="demo-wrap"
  >
    <ul
      class="uc-fe-pagination uc-fe-pagination-md c0"
      unselectable="unselectable"
    >
      <li
        aria-disabled="true"
        class="uc-fe-pagination-disabled uc-fe-pagination-prev"
        title="上一页"
      >
        <i
          class="icon__left uc-fe-pagination-prev-icon "
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-1 uc-fe-pagination-item-active"
        tabindex="0"
        title="1"
      >
        <a>
          1
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-2"
        tabindex="0"
        title="2"
      >
        <a>
          2
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-3"
        tabindex="0"
        title="3"
      >
        <a>
          3
        </a>
      </li>
      <li
        aria-disabled="false"
        class=" uc-fe-pagination-next"
        tabindex="0"
        title="下一页"
      >
        <i
          class="icon__right uc-fe-pagination-next-icon "
        />
      </li>
    </ul>
  </div>
</div>
`;

exports[`Pagination demo -- uncontrolled 1`] = `
.c0 {
  color: #6b798e;
  font-size: 12px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: inline-block;
  vertical-align: middle;
}

.c0 .uc-fe-pagination-item,
.c0 .uc-fe-pagination-prev,
.c0 .uc-fe-pagination-next,
.c0 .uc-fe-pagination-jump-prev,
.c0 .uc-fe-pagination-jump-next {
  outline: none;
  box-sizing: border-box;
  background-color: #fff;
  text-align: center;
  border-radius: 2px;
  margin-right: 5px;
  cursor: pointer;
  padding: 0 2px;
  display: inline-block;
  vertical-align: middle;
  min-width: 28px;
  height: 28px;
  line-height: 26px;
}

.c0 .uc-fe-pagination-item,
.c0 .uc-fe-pagination-prev,
.c0 .uc-fe-pagination-next {
  border: 1px solid #c3cad9;
}

.c0 .uc-fe-pagination-item:hover,
.c0 .uc-fe-pagination-prev:hover,
.c0 .uc-fe-pagination-next:hover {
  border-color: #4683e6;
  color: #fff;
  background-color: #4683e6;
}

.c0 .uc-fe-pagination-jump-prev:hover,
.c0 .uc-fe-pagination-jump-next:hover {
  color: #4074e1;
}

.c0 .uc-fe-pagination-item-active,
.c0 .uc-fe-pagination-item-active:hover {
  border-color: #4683e6;
  color: #4074e1;
  background-color: #f4f9ff;
  cursor: default;
}

.c0 .uc-fe-pagination-disabled,
.c0 .uc-fe-pagination-disabled:hover {
  border-color: #d9d9d9;
  background-color: #f7f7f7;
  color: #bbb;
  cursor: not-allowed;
}

.c0 .uc-fe-pagination-prev-icon,
.c0 .uc-fe-pagination-next-icon {
  cursor: inherit;
}

.c0 .uc-fe-pagination-options,
.c0 .uc-fe-pagination-options-size-changer,
.c0 .uc-fe-pagination-options-quick-jumper {
  display: inline-block;
  vertical-align: middle;
}

.c0 .uc-fe-pagination-options-size-changer {
  margin-right: 5px;
}

.c0 .uc-fe-pagination-options-gobutton {
  margin-left: 5px;
}

.c0 .uc-fe-pagination-quick-jumper-text,
.c0 .uc-fe-pagination-options-quick-jumper-text {
  color: #6b798e;
}

<div>
  <div
    class="demo-wrap"
  >
    <ul
      class="uc-fe-pagination uc-fe-pagination-md c0"
      unselectable="unselectable"
    >
      <li
        aria-disabled="true"
        class="uc-fe-pagination-disabled uc-fe-pagination-prev"
        title="上一页"
      >
        <i
          class="icon__left uc-fe-pagination-prev-icon "
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-1 uc-fe-pagination-item-active"
        tabindex="0"
        title="1"
      >
        <a>
          1
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-2"
        tabindex="0"
        title="2"
      >
        <a>
          2
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-3"
        tabindex="0"
        title="3"
      >
        <a>
          3
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-4"
        tabindex="0"
        title="4"
      >
        <a>
          4
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-5 uc-fe-pagination-item-before-jump-next"
        tabindex="0"
        title="5"
      >
        <a>
          5
        </a>
      </li>
      <li
        class="uc-fe-pagination-jump-next"
        tabindex="0"
        title="向后 5 页"
      >
        <i
          class="icon__more-three uc-fe-pagination-jump-icon "
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-10"
        tabindex="0"
        title="10"
      >
        <a>
          10
        </a>
      </li>
      <li
        aria-disabled="false"
        class=" uc-fe-pagination-next"
        tabindex="0"
        title="下一页"
      >
        <i
          class="icon__right uc-fe-pagination-next-icon "
        />
      </li>
    </ul>
  </div>
  <div
    class="demo-wrap"
  >
    <ul
      class="uc-fe-pagination uc-fe-pagination-md c0"
      unselectable="unselectable"
    >
      <li
        aria-disabled="true"
        class="uc-fe-pagination-disabled uc-fe-pagination-prev"
        title="上一页"
      >
        <i
          class="icon__left uc-fe-pagination-prev-icon "
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-1 uc-fe-pagination-item-active"
        tabindex="0"
        title="1"
      >
        <a>
          1
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-2"
        tabindex="0"
        title="2"
      >
        <a>
          2
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-3"
        tabindex="0"
        title="3"
      >
        <a>
          3
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-4"
        tabindex="0"
        title="4"
      >
        <a>
          4
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-5 uc-fe-pagination-item-before-jump-next"
        tabindex="0"
        title="5"
      >
        <a>
          5
        </a>
      </li>
      <li
        class="uc-fe-pagination-jump-next"
        tabindex="0"
        title="向后 5 页"
      >
        <i
          class="icon__more-three uc-fe-pagination-jump-icon "
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-10"
        tabindex="0"
        title="10"
      >
        <a>
          10
        </a>
      </li>
      <li
        aria-disabled="false"
        class=" uc-fe-pagination-next"
        tabindex="0"
        title="下一页"
      >
        <i
          class="icon__right uc-fe-pagination-next-icon "
        />
      </li>
    </ul>
  </div>
</div>
`;
